# flutter_software_embedder

./: .gitignore  CMakeLists.txt  README.md
hello_world/: pubspec.yaml
hello_world/lib/: main.dart
src/: main.cpp
